<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:hapticFeedbackEnabled="false"
    tools:context="com.rc.dice.LaunchActivity"
    >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selectDiceView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:contentDescription="@string/question_desc"
            android:gravity="bottom|center"
            android:text="@string/question_view"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/mainDiceImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:contentDescription="@string/dice_view_description"
            app:srcCompat="@drawable/my_dice_perspective" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
           >

            <Button
                android:id="@+id/one_dice_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:contentDescription="@string/one_dice_desc"
                android:text="@string/one_dice_button"
                android:textSize="26sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/two_dice_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:contentDescription="@string/two_dice_desc"
                android:hapticFeedbackEnabled="true"
                android:text="@string/two_dice_button"
                android:textSize="26sp" />
        </TableRow>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            ads:adSize= "SMART_BANNER"
            ads:adUnitId= "@string/ad_test_id"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>